--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -150,19 +150,25 @@ span#contact-tutor-header {
 
 th {
    font-size: 14px; 
-   padding: 10px;
+   padding: 15px;
+   margin: 10px;
+   background-color: white; 
+}
+
+tr {
+   background-color: #D4D4BF; 
 }
 
 td {
    font-size: 14px; 
-   background-color: #D4D4BF; 
+   border-radius: 20px 30px 30px 20px;
    padding: 15px;
    
 }
 
 tbody {
    box-shadow: 0 0 1em;
-   border-radius: 20px 0px 20px 20px;
+   border-radius: 20px 20px 20px 20px;
 }
 
 div#back_link {
