--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,17 +1,26 @@
-<p>
-  <strong>Title:</strong>
-  <%= @comment.title %>
-</p>
 
- <p>
-  <strong>Name:</strong>
-  <%= @comment.name %>
-</p>
+<table>
+  <tr>
+    <td>
+		<p>
+		  <strong>Title:</strong>
+		  <%= @comment.title %>
+		</p>
 
-<p>
-  <strong>Text:</strong>
-  <%= @comment.text %>
-</p>
+		 <p>
+		  <strong>Name:</strong>
+		  <%= @comment.name %>
+		</p>
+
+		<p>
+		  <strong>Text:</strong>
+		  <%= @comment.text %>
+		</p>
+	</td>
+  </tr>
+</table>
+
+<hr>
 
 <p>
     <%= link_to 'Edit', edit_comment_path(@comment)%> 
