--- a/app/views/students/contact.html.erb
+++ b/app/views/students/contact.html.erb
@@ -12,6 +12,7 @@
 <% @tutors.each do |tutor| %>
 <p>
 	<table id="tutor-table">
+    <th> Contact info </th>
 		<td><%= tutor.name %></td>
 		<td>Email: <%= tutor.email %></td>
 	</table>
