--- a/app/views/students/tools.html.erb
+++ b/app/views/students/tools.html.erb
@@ -22,10 +22,10 @@
               
             <p>One of the best cloud servers to share our content.</p>
                 
-            <%= link_to 'Upload your file to dropbox', controller: "dropbox", action: "main" %><br>
+            <%= link_to 'Upload your file to dropbox', controller: "dropbox", action: "main" %>
 
         <script src="https://www.dropbox.com/static/api/2/dropins.js" type="text/javascript" id="dropboxjs" data-app-key="ps8sv6wjj5v125t"></script>
-
+        <br>
         <p> We strongly recommend <b>'WE TEACH. WE LEARN'</b> as a guide to make your classes <b>interactive</b> and <b>learner-centered</b>.</p>
         
         <a href="https://www.dropbox.com/home/TEFL?preview=teachlearn.pdf" class="dropbox-saver">Save</a><br>
