--- a/app/views/tutors/index.html.erb
+++ b/app/views/tutors/index.html.erb
@@ -1,4 +1,7 @@
-<h1> Tutor's Index </h1>
+<div id="tutors-header">
+	<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="46" width="46">
+	<h1> Tutor's Index </h1>
+</div>
 
 <hr>
 <%= link_to 'Home', root_path %>
