--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,23 +1,30 @@
-<%= form_for :comment, url: comments_path(@comment), method: :patch do |f| %>
+<table>
+  <tr>
+    <td>
+      <%= form_for :comment, url: comments_path(@comment), method: :patch do |f| %>
+        <p>
+          <%= f.label :title %><br>
+          <%= f.text_field :title %>
+        </p>
 
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
+        <p>
+          <%= f.label :name %><br>
+          <%= f.text_field :name %>
+        </p>
 
-  <p>
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </p>
+        <p>
+          <%= f.label :text %><br>
+          <%= f.text_area :text %>
+        </p>
 
-  <p>
-    <%= f.label :text %><br>
-    <%= f.text_area :text %>
-  </p>
+        <p>
+          <%= f.submit %>
+        </p>
+      <% end %>
+      </td>
+  </tr>
+</table>
 
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<hr>
 
 <%= link_to 'Back', comments_path%>
