--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,18 +1,25 @@
+<table>
+  <tr>
+    <td>
+		 <p>
+		  <strong>Title:</strong>
+		  <%= @post.title %>
+		</p>
 
- <p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
+		 <p>
+		  <strong>Name:</strong>
+		  <%= @post.name %>
+		</p>
 
- <p>
-  <strong>Name:</strong>
-  <%= @post.name %>
-</p>
+		<p>
+		  <strong>Text:</strong>
+		  <%= @post.text %>
+		</p>
+	</td>
+  </tr>
+</table>
 
-<p>
-  <strong>Text:</strong>
-  <%= @post.text %>
-</p>
+<hr> 
 
 <p>
     <%= link_to 'Edit', edit_post_path(@post)%> 
