--- a/app/views/students/home.html.erb
+++ b/app/views/students/home.html.erb
@@ -1,9 +1,9 @@
 <!-- Incluir logo de la plataforma <a href src="/tefl_logo.jpg">-->
 	
 	<div id="home-header">
-		<h1> TEFL Platform for tutors & students </h1>
+		<h1> TEFL Platform for teachers & students </h1>
 
-		<div id="motto"><p> Educative platform for students and tutors with the aim of fostering English learning. </p>
+		<div id="motto"><p> Educative platform fostering English learning. </p>
 		</div>
 	</div>
 
@@ -12,6 +12,10 @@
 	<nav id="nav_bar">
 			
 			<span id="nav_bar">
+
+					<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="36" width="36"> 
+					<%= link_to 'Teachers', teachers_path %>
+
 					<img id="student" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="36" width="36"> 
 					<%= link_to 'Students', students_path %>
 
@@ -37,8 +41,6 @@
 
 <h3 id="welcome">Welcome back!</h3>
 
-
-		    		
 							<h3 id="latest_posts"> Latest posts: </h3>
 								<% @posts.each do |post| %> 
 								<table id="table_posts"> 
@@ -57,15 +59,13 @@
 											<td><%= post.text %></td>
 
 											<td><button type='button' id='like-button'> Like </button></td>
-											<td id="liked-mark"></td>
+											<td id="likes"></td>
 										</tr>
 									</div>
 								</table>
 
 							<% end %>
 
-		    			
-		    	
 		    				<div id="comments_home">
 								<h3 id="latest_feedback">Latest feedback</h3>
 									<% @comments.each do |comment| %> 
@@ -82,7 +82,7 @@
 											<td><%= comment.text %></td>
 											
 											<td><button type='button' id='like-button'> Like </button></td>
-											<td id="liked-mark"></td>
+											<td id="likes"></td>
 										</tr>
 									</table>
 								<% end %>
@@ -91,8 +91,15 @@
 <script type="text/javascript">
 
 	$('button#like-button').on('click', function() {
-		$('td#liked-mark').css('background-color', 'rgb(73,203,214)');
+		alert('Thanks for your support!');
 	});
+
+/* Contador de likes para cada comentario y post
+
+	$('button#like-button').on('click', function() {
+	    $('#likes').html(function(i, val) { return val*1+1 });
+	});
+*/
 
 </script>
 
