--- a/app/views/students/media.html.erb
+++ b/app/views/students/media.html.erb
@@ -3,32 +3,46 @@
 <h3 id="media-title"> Have fun with the latest media </h3>
 
 <hr>
-<div id="home-link">
+
 <%= link_to 'Home', root_path %><br>
-</div>
+
 <hr>
 
-<table id="soundcloud-table">
-	<th>Listen to this song by The Cure to learn the days of the week! </th>
-	<tr>
-		<td>
-			<div id="soundcloud_container">
-				<iframe width="100%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/33332185&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe><br>
-			</div>
-		</td>
-	</tr>
-</table>
+<div class="container">
 
-<table id="spotify-table">
-	<th>Access your Spotify Account to start listening to our Karaoke Songs! </th> 
-	<tr>
-		<td>
-			<div id="spotify_container">
-				<iframe src="https://embed.spotify.com/?uri=spotify%3Atrack%3A4th1RQAelzqgY7wL53UGQt" width="450" height="80" frameborder="0" allowtransparency="true"></iframe><br>
-			</div>
-		</td>
-	</tr>
-</table>
+	<div class="row">
+		<div class="col-md-6">
+			<table id="spotify-table">
+				<th>Listen to our Karaoke Songs! </th> 
+				<tr>
+					<td>
+						<div id="spotify_container">
+							<iframe src="https://embed.spotify.com/?uri=spotify:user:deivymc:playlist:3bSJWrbDG4rKwURqdBVmJP" width="300" height="380" frameborder="0" allowtransparency="true"></iframe><br>
+						</div>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</div>
+</div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-md-6">
+			<table id="video-table">
+				<th> Latest videos </th> 
+				<tr>
+					<td>
+						<video src="/StickStuckStuck.mp4" controls>
+						</video>	
+					</td>
+				</tr>
+			</table>
+		</div>
+	</div>
+</div>
+
+
 
 
 
