added skype call and chat for tutor

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,9 @@
 
 
 	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-	<script src="posts.js"></script>
-	<script src="games.js"></script>
+  <script type="text/javascript" src="http://www.skypeassets.com/i/scom/js/skype-uri.js"></script>
+	<script type="text/javascript" src="posts.js"></script>
+	<script type="text/javascript" src="games.js"></script>
 <%= yield %>
 
 </body>
