--- a/app/views/students/home.html.erb
+++ b/app/views/students/home.html.erb
@@ -1,7 +1,7 @@
 <!-- Incluir logo de la plataforma <a href src="/tefl_logo.jpg">-->
 	
 	<div id="home-header">
-		<h1> TEFL Platform for teachers & students </h1>
+		<h1><b> TEFL Platform for teachers & students </b></h1>
 
 		<div id="motto"><p> Educative platform fostering English learning. </p>
 		</div>
@@ -58,7 +58,7 @@
 											<td><%= post.name %></td>
 											<td><%= post.text %></td>
 
-											<td><button type='button' id='like-button'> Like </button></td>
+											<td><button type='button' id='like-button'><b>Like<b> </button></td>
 											<td id="likes"></td>
 										</tr>
 									</div>
