--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,9 +3,9 @@
 </span>
 
 <hr>
-<div id="home-link">
+
 <%= link_to 'Home', root_path %>
-</div>
+
 <hr>
 
 <div id="posts-titles">
@@ -33,7 +33,7 @@
 
   <table>
 
-    <th> Post your ideas!:</th> 
+    <th> Post your ideas!</th> 
     
     <tr>
       <td>
