--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,4 +1,6 @@
-<h1> Students Index </h1>
+<span id="student-header">
+	<img id="student-header" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="46" width="46"><h1 id="student-title"> Students Index </h1>
+</span>
 
 <hr>
 
