--- a/app/views/students/media.html.erb
+++ b/app/views/students/media.html.erb
@@ -23,17 +23,13 @@
 				</tr>
 			</table>
 		</div>
-	</div>
-</div>
 
-<div class="container">
-	<div class="row">
 		<div class="col-md-6">
 			<table id="video-table">
 				<th> Latest videos </th> 
 				<tr>
 					<td>
-						<video src="/StickStuckStuck.mp4" controls>
+						<video src="https://www.youtube.com/watch?v=8aMkqOnlV2w" controls>
 						</video>	
 					</td>
 				</tr>
