--- a/app/views/students/tools.html.erb
+++ b/app/views/students/tools.html.erb
@@ -6,33 +6,29 @@
        <div id="duolingo_container">
             <img id="duolingo-logo" src="http://icons.iconarchive.com/icons/martz90/hex/256/duolingo-icon.png" height="46" width="46">
 
-            <p>An amazing and interactive way of learning English.<p> Join our <b>Duolingo Dashboard!</b> </p>
-            <a href="https://www.duolingo.com/o$o=deivyemcee@hotmail.com&s=TEFL%20Platform">Join!</a>
+            <p><strong>Discover Duolingo, an amazing and interactive way of learning English.</strong></p><br>
+                <ul>
+                    <li><a href="https://www.duolingo.com/o$o=deivyemcee@hotmail.com&s=TEFL%20Platform"><b>Join</b> our <b>Duolingo Dashboard!</b></a></li>
 
-            <p>See your classmates' progress at Duolingo: </p>
-            <a href="/duolingo/dashboard">Dashboard</a>
-    </div>
+                    <li><a href="/duolingo/dashboard">See your class progress at <b>Duolingo Dashboard</b></a></li>
+                 </ul>
+        </div>
     
     <div id="dropbox_container">
             <img id="dropbox-logo" src="http://icons.iconarchive.com/icons/martz90/hex/256/dropbox-icon.png" height="46" width="46">
 
-            <p>Browse our Dropbox folder.</p>
-            <%= link_to 'Authenticate', controller: "dropbox", action: "auth_start" %>
-            <br>
-              
-            <p>One of the best cloud servers to share our content.</p>
-                
-            <%= link_to 'Upload your file to dropbox', controller: "dropbox", action: "main" %>
-
+            <p><strong>Browse our Dropbox, one of the best cloud servers to share our content.</strong></p><br>
+            <ul>
+                <li><%= link_to 'Authenticate', controller: "dropbox", action: "auth_start" %></li>        
+                <li><%= link_to 'Upload your file to dropbox', controller: "dropbox", action: "main" %></li>
+                <li><a href="https://www.dropbox.com/sh/ow7ekrt4w32358u/AAB8doO49mCrb8vvFhX2IKoaa?dl=0">Browse the <b>TEFL folder</b> and <b>download</b> the files you need.</a></li>
+        </ul>
         <script src="https://www.dropbox.com/static/api/2/dropins.js" type="text/javascript" id="dropboxjs" data-app-key="ps8sv6wjj5v125t"></script>
         <br>
         <p> We strongly recommend <b>'WE TEACH. WE LEARN'</b> as a guide to make your classes <b>interactive</b> and <b>learner-centered</b>.</p>
         
         <a href="https://www.dropbox.com/home/TEFL?preview=teachlearn.pdf" class="dropbox-saver">Save</a><br>
         <br>
-        <p> Browse the <b>TEFL folder</b> and <b>download</b> the files you need. </p>
-
-        <a href="https://www.dropbox.com/home/TEFL">TEFL</a>
     </div>
 
 
