--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,12 @@
 <span id="recent-posts-header">
-  <img id="posts" src="http://icons.iconarchive.com/icons/martz90/hex/256/wordpress-icon.png" height="36" width="36"><h3 id="post-title"> Recent Posts </h3>
+ <h3 id="post-title"> <img id="posts" src="http://icons.iconarchive.com/icons/martz90/hex/256/wordpress-icon.png" height="36" width="36"> Recent Posts </h3>
 </span>
 
 <hr>
 
+<div id="home-link">
 <%= link_to 'Home', root_path %>
+</div>
 
 <hr>
 
