--- a/app/views/students/contact.html.erb
+++ b/app/views/students/contact.html.erb
@@ -1,11 +1,12 @@
 <span id="contact-tutor-header">
-  <h3 id="title-tutor"> Contact your teacher: </h3>
-  <img id= "contact-tutor" src="http://icons.iconarchive.com/icons/martz90/hex/256/email-2-icon.png" height="46" width="46">
+  <h3 id="title-tutor"><img id= "contact-tutor" src="http://icons.iconarchive.com/icons/martz90/hex/256/email-2-icon.png" height="46" width="46"> Contact your teacher </h3> 
 </span>
 
 <hr>
 
+<div id="home-link">
 <%= link_to 'Home', root_path %>
+</div>
 
 <hr>
 
