--- a/app/views/students/games.html.erb
+++ b/app/views/students/games.html.erb
@@ -1,13 +1,14 @@
 
 <div id="games-header">
-	<img id="match-games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="46" width="46">
-	<h3 id="matching-title">Matching Game </h3>
+	
+	<h3 id="matching-title"><img id="match-games" src="http://icons.iconarchive.com/icons/martz90/hex/256/gamehub-icon.png" height="46" width="46">Matching Game </h3>
 </div>
 
 <hr>
 
-
+<div id="home-link">
 	<%= link_to 'Home', root_path %>
+</div>
 
 <hr>
 
