--- a/app/views/students/media.html.erb
+++ b/app/views/students/media.html.erb
@@ -1,10 +1,12 @@
-<img id="media-new" src="http://icons.iconarchive.com/icons/martz90/hex/256/poweramp-icon.png" height="36" width="36">
 
-<h3 id="media-title"> Have fun with the latest media </h3>
+<h3 id="media-title"><img id="media-new" src="http://icons.iconarchive.com/icons/martz90/hex/256/poweramp-icon.png" height="46" width="46">
+ Have fun with the latest media </h3>
 
 <hr>
 
+<div id="home-link">
 <%= link_to 'Home', root_path %><br>
+</div>
 
 <hr>
 
