--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,23 +1,16 @@
-<div id="teachers-header">
-	<img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="46" width="46"> 
-	<h3 id="teachers-title"> Teachers' Index </h3>
+<div id="teachers-header">	
+	<h3 id="teachers-title"><img id="teachers" src="http://icons.iconarchive.com/icons/martz90/hex/256/bookmark-icon.png" height="46" width="46">  Teachers' Index </h3>
 </div>
 
 <hr>
+<div id="home-link">
 <%= link_to 'Home', root_path %>
+</div>
 <hr>
 
-<div id="container">
-    <header>
-        <h3>Some quick advice to give your best in the class!</h3>
+        <h3 id="teachers-title2">Give your best in the class!</h3>
     </header>
      
-    <!-- Each image is 350px by 233px -->
- 
-			    <div class="photobanner">
-			        <img class="first" src="image-1.jpg" alt="">
-			        <img src="http://gallerylanguages.net/wp-content/uploads/2015/02/Gallery_graphic.jpg" alt="" width:"350" height="233" >
-			        <img src="http://1.bp.blogspot.com/-r_6eFZfrxO4/VKO7AAebPNI/AAAAAAAABSI/AGZnxAqa_hI/s1600/1969338_10152668368124123_3520500785672203751_n.png" alt="" width:"350" height="233" >
-			        <img src="http://3.bp.blogspot.com/-KgrmuaVexQk/VFECiYrt58I/AAAAAAAACn0/m5vBv379hVs/s1600/1424360_10152658371414123_3917199733452866370_n.png" alt="" width:"350" height="233" >
-			    </div>
+   <div id="issuu-reading" data-configid="3007336/13454019" style="width:525px; height:371px;" class="issuuembed"></div><script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script> 
+
 </div>
