--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,10 +1,12 @@
 <span id="student-header">
-	<img id="student-header" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="46" width="46"><h1 id="student-title"> Students Index </h1>
+	<h1 id="student-title"><img id="student-header" src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="46" width="46"> Your Class </h1>
 </span>
 
 <hr>
 
+<div id="home-link">
 <%= link_to 'Home', root_path %>
+</div>
 
 <hr>
 
@@ -15,12 +17,13 @@
 		<tr>
 			<td><img src="http://icons.iconarchive.com/icons/martz90/hex/256/favourites-icon.png" height="46" width="46"></td>
 			<td><b><%= student.name %></b></td>
-
 			<td>Email: <%= student.email %></td>
 			<td>Age: <%= student.age %></td>
 			<td>Level: <%= student.level %></td>
+		<!--
 			<td>Progress: <%= student.progress %></td>
 			<td>Score: <%= student.score %></td>
+		-->
 			<td>Comment: <%= student.comment %></td>
 		</tr>
 	</table><br>
