--- a/app/views/students/home.html.erb
+++ b/app/views/students/home.html.erb
@@ -69,6 +69,11 @@
 
 											<td><button type='button' id='like-button'> Like </button></td>
 											<td id="likes"></td>
+
+											<td>
+												<!-- Habilitar comentarios en los posts -->
+											</td>
+
 										</tr>
 									</div>
 								</table>
