--- a/app/views/students/media.html.erb
+++ b/app/views/students/media.html.erb
@@ -31,8 +31,11 @@
 				<th> Latest videos </th> 
 				<tr>
 					<td>
-						<video src="https://www.youtube.com/watch?v=8aMkqOnlV2w" controls>
-						</video>	
+
+						<video src="duolingo.mp4" controls>
+						  Your browser does not support the <code>video</code> element.
+						</video>
+							
 					</td>
 				</tr>
 			</table>
